<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_margin"
    android:orientation="vertical"
    tools:context="aic.zenika.com.sensor.controller.fragment.BatteryFragment">

    <TextView
        android:id="@+id/battery_level"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:textSize="40sp"
        android:textColor="@color/DarkRed"
        android:gravity="center"
        android:layout_margin="@dimen/default_margin"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="end"
                android:paddingEnd="@dimen/default_margin"
                android:text="@string/battery_health_label" />

            <TextView
                android:id="@+id/battery_health"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:paddingStart="@dimen/default_margin"
                android:textColor="@color/DarkRed"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="end"
                android:paddingEnd="@dimen/default_margin"
                android:text="@string/battery_plugged_label" />
            <TextView
                android:id="@+id/battery_plugged"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:paddingStart="@dimen/default_margin"
                android:textColor="@color/DarkRed"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="end"
                android:paddingEnd="@dimen/default_margin"
                android:text="@string/battery_status_label"/>
            <TextView
                android:id="@+id/battery_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:paddingStart="@dimen/default_margin"
                android:textColor="@color/DarkRed"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="end"
                android:paddingEnd="@dimen/default_margin"
                android:text="@string/battery_technology_label"/>
            <TextView
                android:id="@+id/battery_technology"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:paddingStart="@dimen/default_margin"
                android:textColor="@color/DarkRed"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="end"
                android:paddingEnd="@dimen/default_margin"
                android:text="@string/battery_temperature_label"/>
            <TextView
                android:id="@+id/battery_temperature"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:paddingStart="@dimen/default_margin"
                android:textColor="@color/DarkRed"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="end"
                android:paddingEnd="@dimen/default_margin"
                android:text="@string/battery_voltage_label"/>
            <TextView
                android:id="@+id/battery_voltage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:paddingStart="@dimen/default_margin"
                android:textColor="@color/DarkRed"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>