<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_margin"
    android:orientation="vertical"
    tools:context="aic.zenika.com.sensor.controller.fragment.RotVectorSensorFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="end"
                android:paddingEnd="@dimen/default_margin"
                android:text="@string/accelerometer_x_label" />
            <TextView
                android:id="@+id/x_rot"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:paddingStart="@dimen/default_margin"
                android:textColor="@color/DarkRed"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="end"
                android:paddingEnd="@dimen/default_margin"
                android:text="@string/accelerometer_y_label" />
            <TextView
                android:id="@+id/y_rot"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:paddingStart="@dimen/default_margin"
                android:textColor="@color/DarkRed"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="end"
                android:paddingEnd="@dimen/default_margin"
                android:text="@string/accelerometer_z_label" />
            <TextView
                android:id="@+id/z_rot"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:paddingStart="@dimen/default_margin"
                android:textColor="@color/DarkRed"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="end"
                android:paddingEnd="@dimen/default_margin"
                android:text="@string/cos_rot" />
            <TextView
                android:id="@+id/cos_rot"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:paddingStart="@dimen/default_margin"
                android:textColor="@color/DarkRed"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>